[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/Jerimiah/scripts/ParkingSpace.gd" type="Script" id=1]
[ext_resource path="res://games/Jerimiah/assets/car3.png" type="Texture" id=2]
[ext_resource path="res://games/Jerimiah/scenes/Highlight.tscn" type="PackedScene" id=3]
[ext_resource path="res://games/Jerimiah/assets/Ticket.png" type="Texture" id=4]
[ext_resource path="res://games/Jerimiah/assets/car1.png" type="Texture" id=5]
[ext_resource path="res://games/Jerimiah/assets/car4.png" type="Texture" id=6]
[ext_resource path="res://games/Jerimiah/assets/car2.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 58.5, 31.5 )

[node name="ParkingSpace" type="Node2D"]
script = ExtResource( 1 )

[node name="ParkingSpaceArea" type="Area2D" parent="."]
position = Vector2( 0, -21 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParkingSpaceArea"]
position = Vector2( 3.5, 0 )
shape = SubResource( 1 )

[node name="Car" type="Node2D" parent="."]

[node name="Car1" type="Sprite" parent="Car"]
visible = false
position = Vector2( -5, -8 )
texture = ExtResource( 5 )

[node name="Windshield" parent="Car/Car1" instance=ExtResource( 3 )]
position = Vector2( 15, -9 )
detailType = "windshield"

[node name="Plates" parent="Car/Car1" instance=ExtResource( 3 )]
visible = false
position = Vector2( -41, 3 )
detailType = "plates"

[node name="Ticket" type="Sprite" parent="Car/Car1"]
visible = false
position = Vector2( 19, -7 )
texture = ExtResource( 4 )

[node name="Car2" type="Sprite" parent="Car"]
visible = false
position = Vector2( 0, -15 )
texture = ExtResource( 7 )

[node name="Windshield" parent="Car/Car2" instance=ExtResource( 3 )]
position = Vector2( 25, -8 )
detailType = "windshield"

[node name="Plates" parent="Car/Car2" instance=ExtResource( 3 )]
visible = false
position = Vector2( -34, 5 )
detailType = "plates"

[node name="Ticket" type="Sprite" parent="Car/Car2"]
visible = false
position = Vector2( 26, -6 )
texture = ExtResource( 4 )

[node name="Car3" type="Sprite" parent="Car"]
visible = false
position = Vector2( 0, -14 )
texture = ExtResource( 2 )

[node name="Windshield" parent="Car/Car3" instance=ExtResource( 3 )]
position = Vector2( 15, -10 )
detailType = "windshield"

[node name="Plates" parent="Car/Car3" instance=ExtResource( 3 )]
visible = false
position = Vector2( -42, 3 )
detailType = "plates"

[node name="Ticket" type="Sprite" parent="Car/Car3"]
visible = false
position = Vector2( 19, -8 )
texture = ExtResource( 4 )

[node name="Car4" type="Sprite" parent="Car"]
visible = false
position = Vector2( 0, -15 )
texture = ExtResource( 6 )

[node name="Windshield" parent="Car/Car4" instance=ExtResource( 3 )]
position = Vector2( 15, -10 )
detailType = "windshield"

[node name="Plates" parent="Car/Car4" instance=ExtResource( 3 )]
visible = false
position = Vector2( -40, 2 )
detailType = "plates"

[node name="Ticket" type="Sprite" parent="Car/Car4"]
visible = false
position = Vector2( 19, -8 )
texture = ExtResource( 4 )

[node name="parkingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="ParkingSpaceArea" to="." method="enters_space"]
[connection signal="timeout" from="parkingTimer" to="." method="car_exits"]
